This git will fix alignment

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ button {
   display: inline-block;
   margin: 10px;
   width: 20%;
+  text-align: center;
 }
 
 .specialCard {
